--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,11 @@
 		<version>2.5.8</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>webnext.com.br</groupId>
+	<groupId>br.com.webnext</groupId>
 	<artifactId>modulologin</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>modulologin</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Módulo de Login</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
