--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,33 +1,50 @@
-version: "3"
+# Docker Compose file Reference (https://docs.docker.com/compose/compose-file/)
+version: '3.7'
 
+# Define services
 services:
-
-  myapp-mysql:
-    image: mysql:8.0
-    environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=demo
-      - MYSQL_USER=myapp-root
-      - MYSQL_PASSWORD=root
-    ports:
-      - 3306:3306
-
-  myapp-main:
+  # App backend service
+  app-server:
     image: pinheiropedro/archetype-test:v1
-    restart: on-failure
-    depends_on:
-      - myapp-mysql
     ports:
-      - 8080:8080
+      - "8080:8080" # Forward the exposed port 8080 on the container to port 8080 on the host machine
+    restart: always
+    depends_on: 
+      - db # This service depends on mysql. Start that first.
+    environment: # Pass environment variables to the service
+      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/demo?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
+      SPRING_DATASOURCE_USERNAME: javachinna
+      SPRING_DATASOURCE_PASSWORD: javachinna     
+    networks: # Networks to join (Services on the same network can communicate with each other using their name)
+      - backend
+      - frontend
+
+  # Frontend Service 
+  app-client:
+    image: pinheiropedro/sample-angular-app-archetype-test:v1
+    ports:
+      - "8081:80" # Map the exposed port 80 on the container to port 8081 on the host machine
+    restart: always
+    depends_on:
+      - app-server
+    networks:
+      - frontend  
+
+  # Database Service (Mysql)
+  db:
+    image: mysql:8.0
+    ports:
+      - "3306:3306"
+    restart: always
     environment:
-      - DATABASE_HOST=localhost
-      - DATABASE_USER=root
-      - DATABASE_PASSWORD=root
-      - DATABASE_NAME=demo
-      - DATABASE_PORT=3306
-
-      
-      
-
-
-   
+      MYSQL_DATABASE: demo
+      MYSQL_USER: javachinna
+      MYSQL_PASSWORD: javachinna
+      MYSQL_ROOT_PASSWORD: root
+    networks:
+      - backend  
+  
+# Networks to be created to facilitate communication between containers
+networks:
+  backend:
+  frontend:  
